Fix minor bug with NPM

--- a/homework2/package.json
+++ b/homework2/package.json
@@ -3,11 +3,9 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "chai": "*"
-  },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "chai": "*"
   },
   "scripts": {
     "test": "mocha"
