--- a/homework2/package.json
+++ b/homework2/package.json
@@ -5,7 +5,10 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "chai": "*"
+    "chai": "*",
+    "sinon": "*",
+    "sinon-chai", "*",
+    "coffee-script": "*"
   },
   "scripts": {
     "test": "mocha"
