--- a/homework2/package.json
+++ b/homework2/package.json
@@ -7,11 +7,11 @@
     "mocha": "*",
     "chai": "*",
     "sinon": "*",
-    "sinon-chai", "*",
+    "sinon-chai": "*",
     "coffee-script": "*"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --compilers coffee:coffee-script/register ./test/warmup_spec.coffee"
   },
   "repository": {
     "type": "git",
