--- a/homework2/package.json
+++ b/homework2/package.json
@@ -13,7 +13,7 @@
     "request": "*"
   },
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register ./test/warmup_spec.coffee"
+    "test": "mocha --compilers coffee:coffee-script/register ./test/test.coffee"
   },
   "repository": {
     "type": "git",
